unpackaged/main/default/objects/DoubleClick_Request__c/DoubleClick_Request__c.object-meta.xml
<CustomObject>
    <label>DoubleClick Request</label>
    <nameField>
        <displayFormat>DCS - {DD}/{MM}/{YYYY} - {000000}</displayFormat>
        <label>DoubleClick Update #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DoubleClick Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>