unpackaged/main/default/objects/DoubleClick_Request__c/fields/Ad_ID__c.field-meta.xml
<CustomField>
    <fullName>Ad_ID__c</fullName>
    <label>Ad ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>