unpackaged/main/default/objects/DoubleClick_Request__c/fields/Advertiser_ID__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_ID__c</fullName>
    <label>Advertiser ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>