unpackaged/main/default/objects/DoubleClick_Request__c/fields/Agency_ID__c.field-meta.xml
<CustomField>
    <fullName>Agency_ID__c</fullName>
    <label>Agency ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>