unpackaged/main/default/objects/DoubleClick_Request__c/fields/Click_ID__c.field-meta.xml
<CustomField>
    <fullName>Click_ID__c</fullName>
    <label>Click ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>