unpackaged/main/default/objects/DoubleClick_Request__c/fields/Conversion_ID__c.field-meta.xml
<CustomField>
    <fullName>Conversion_ID__c</fullName>
    <label>Conversion ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>