unpackaged/main/default/objects/DoubleClick_Request__c/fields/Conversion_Status__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Status__c</fullName>
    <label>Conversion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>