unpackaged/main/default/objects/DoubleClick_Request__c/fields/Criterion_ID__c.field-meta.xml
<CustomField>
    <fullName>Criterion_ID__c</fullName>
    <inlineHelpText>(Criterion ID)</inlineHelpText>
    <label>Keyword ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>