unpackaged/main/default/objects/DoubleClick_Request__c/fields/EngineAccountID__c.field-meta.xml
<CustomField>
    <fullName>EngineAccountID__c</fullName>
    <label>Engine Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>