unpackaged/main/default/objects/DoubleClick_Request__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>