unpackaged/main/default/objects/DoubleClick_Request__c/fields/Now_Send_Time__c.field-meta.xml
<CustomField>
    <fullName>Now_Send_Time__c</fullName>
    <formula>NOW() -  Send_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Now - Send Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>