unpackaged/main/default/objects/DoubleClick_Request__c/fields/Quantity_in_Millis__c.field-meta.xml
<CustomField>
    <fullName>Quantity_in_Millis__c</fullName>
    <label>Quantity in Millis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>