unpackaged/main/default/objects/DoubleClick_Request__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DoubleClick Requests</relationshipLabel>
    <relationshipName>DoubleClick_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>