unpackaged/main/default/objects/DoubleClick_Request__c/fields/Related_Lead__c.field-meta.xml
<CustomField>
    <fullName>Related_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>DoubleClick Requests</relationshipLabel>
    <relationshipName>DoubleClick_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>