unpackaged/main/default/objects/DoubleClick_Request__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>DoubleClick Requests</relationshipLabel>
    <relationshipName>DoubleClick_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>