unpackaged/main/default/objects/DoubleClick_Request__c/fields/Segmentation_Type__c.field-meta.xml
<CustomField>
    <fullName>Segmentation_Type__c</fullName>
    <label>Segmentation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>