unpackaged/main/default/objects/DoubleClick_Request__c/fields/Send_Time__c.field-meta.xml
<CustomField>
    <fullName>Send_Time__c</fullName>
    <formula>CreatedDate + IF( ISPICKVAL(Request_Type__c,'Lead') , 1/24/2, 0)</formula>
    <label>Send Time</label>
    <type>DateTime</type>
</CustomField>