unpackaged/main/default/objects/DoubleClick_Request__c/fields/Testmode__c.field-meta.xml
<CustomField>
    <fullName>Testmode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testmode</label>
    <type>Checkbox</type>
</CustomField>